<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/loop_time"
            android:textSize="20sp"
            android:textColor="@color/white_color"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_loop_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_loop_time"
            android:inputType="number"
            android:textColor="@color/black_color"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_set"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white_color"
            android:text="@string/set" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white_color"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>