<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/auto_record"
            android:textSize="20sp"
            android:textColor="@color/white_color"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdo_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="30dp"
                android:text="@string/yes"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:buttonTint="@color/colorPrimary"/>

            <RadioButton
                android:id="@+id/rdo_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:buttonTint="@color/colorPrimary"/>
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btn_okay"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white_color"
        android:text="@string/okay" />

</LinearLayout>